Call it what it is: an analytical engine for the JVM
The README had grown into a CQEngine manual - 963 lines, 90 mentions,
and everything past the modules table was plugin detail that now lives
on the documentation site. Worse, it buried the actual point. DuckDB is
an analytical engine and the JVM has never really had one; CQEngine is
one optional consumer of that, not the identity.

So the README now leads with objects in, answers out, and carries a core
quickstart it never had - a record becomes a table via ColumnarLayout,
TableWriter writes it, Rows reads answers back as Java values. That
snippet is compiled and run, not written from memory. The plugin keeps a
section of its own, the benchmark tables say up front that they are
about the plugin, and the long how-to moved to the site it duplicates.
963 lines to 490.

The site leads the same way, with the CQEngine one-liner folded into a
collapsed aside rather than being the first code on the page, and the
nav grouped into The engine / CQEngine plugin / Reference so the plugin
is visibly one part of this rather than the whole of it.

Headline numbers changed with the framing: it now leads with 62x faster
grouping and 10x faster aggregates than an on-heap collection, which is
what the thing is for, rather than only with the heap it saves.

Also ignores .claude/worktrees, which a subagent had left in the tree.